--- a/index.html
+++ b/index.html
@@ -1,72 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wei Sian's Personal Site</title>
+    <title>Wei Sian</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="W2.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
-    <table cellspacing="20">
-        <tr>
-            <td>    <img src="https://media-exp1.licdn.com/dms/image/C5603AQGk7gLJV-mxSg/profile-displayphoto-shrink_200_200/0/1615774575469?e=1671062400&v=beta&t=gerGOtnyOnZwleLm5TmcefGnJvTqCcDdEZHIQqxrRt0" alt="weisian profile picture">
-            </td>
-            <td><h1>Wei Sian</h1>
-    <p><em>Welcome to my website</em></p>
-    <p>I am an engineer working at the <a href="https://www.science.edu.sg/">Science Centre</a></p></td>
-        </tr>
-    </table>
-
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <h1>I'm Wei Sian.</h1>
+        <p class="sub-header">an engineer.</p>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+    </div>
+<div class="middle-container">
+    <p></p>
+    <div class="profile">
+        <img class="circular" src="images/Profile_edit.jpg" alt="weisian's profile picture">
+        <h2>Hello.</h2>
+        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
     <hr>
-
-    <h3>Education</h3>
-    <h4>University of Glasgow</h4>
-    <ul>
-        <li>Aeronautical Engineering</li>
-        <li>GPA: 2nd Class Upper Honours</li>
-    </ul>
+    <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+            <img class="skill-img" src="images/skills.png" alt="skills">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+            <img class="python-img" src="images/python.png" alt="python">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+    </div>
     <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tr>
-            <td>2019 - Current</td>
-            <td>Experience Engineer</td>
-        </tr>
-        <tr>
-            <td>2015-2016</td>
-            <td>Intern</td>
-        </tr>
-    </table>
-            <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-        <tr>
-            <td>Python</td>
-            <td>★★☆☆☆</td>
-        </tr>
-        <tr>
-            <td>SolidWorks</td>
-            <td>★★☆☆☆</td>
-        </tr>
-        <tr>
-            <td>C++</td>
-            <td>★★☆☆☆</td>
-        </tr>
-        <tr>
-            <td>Fusion 360</td>
-            <td>★★☆☆☆</td>
-        </tr>
-    </table>
-        <hr>
-    <a href="certificates.html">My Certificates</a>
+        <div class="education-row">
+            <img class="education-img" src="images/education.png" alt="education">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+    <hr>
+    <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you would like to get in touch with me.</h3>
+        <p class="contact-message">Drop me an email or check out my social media below.</p>
+        <a class="btn" href="mailto:ohweisian@gmail.com">CONTACT ME</a>
+    </div>
+</div>
 
-    <a href="contact.html">Contact Information</a>
+
+<div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/oh-weisian/">LinkedIn</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a href="https://www.flaticon.com/free-icons/education" title="icons">icons by Freepik</a>
+  <p class="copyright">© 2022 Oh Wei Sian.</p>
+</div>
+
 </body>
 </html>
