--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="navbar">
+  <a href="#about-section">ABOUT</a>
+  <a href="#skills-section">SKILLS</a>
+  <a href="#contact-section">CONTACT ME</a>
+</div>
 <head>
     <meta charset="UTF-8">
     <title>Wei Sian</title>
@@ -19,45 +24,45 @@
     </div>
 <div class="middle-container">
     <p></p>
+    <a name="about-section"></a>
     <div class="profile">
-        <img class="circular" src="images/Profile_edit.jpg" alt="weisian's profile picture">
-        <h2>Hello.</h2>
-        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <img class="circular" src="images/Profile.png" alt="weisian's profile picture">
+        <h2>Hi.</h2>
+        <p class="intro">I'm an aeronautical/mechanical engineer currently working at Science Centre Singapore. I enjoy
+            creating and learning new things. In my spare time, I love reading and have contributed articles for the
+            Science Centre blog. You can check them out <a class="text-link" href="https://blog.science.edu.sg/" target="_blank" rel="noopener noreferrer">here</a>!</p>
+
     </div>
     <hr>
+    <a name="skills-section"></a>
     <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-            <img class="skill-img" src="images/skills.png" alt="skills">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h2 class="sub-section">My Skills</h2>
+        <div class="body-row">
+            <img class="cad-img" src="images/cad.png" alt="cad">
+            <h3>Engineering</h3>
+            <p>I have a background in aeronautical engineering and mechanical engineering. During which, CAD has become a very useful tool in my current work. Currently, I am applying my skills in exhibition build.</p>
         </div>
-        <div class="skill-row">
+        <div class="body-row">
             <img class="python-img" src="images/python.png" alt="python">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <h3>Programming</h3>
+            <p>The first time I dabbled with programming was with C++ during my diploma education. Recently, I have rekindled this interest with learning Python, HTML and CSS.</p>
         </div>
     </div>
     <hr>
-        <div class="education-row">
-            <img class="education-img" src="images/education.png" alt="education">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-        </div>
-    <hr>
+    <a name="contact-section"></a>
     <div class="contact-me">
-        <h2>Get In Touch</h2>
+        <h2 class="sub-section">Get In Touch</h2>
         <h3>If you would like to get in touch with me.</h3>
-        <p class="contact-message">Drop me an email or check out my social media below.</p>
+        <p class="contact-message">Drop me an email using the button or check out my social media below. I am always happy to learn about opportunities!</p>
         <a class="btn" href="mailto:ohweisian@gmail.com">CONTACT ME</a>
     </div>
 </div>
 
 
 <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/oh-weisian/">LinkedIn</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <a href="https://www.flaticon.com/free-icons/education" title="icons">icons by Freepik</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/oh-weisian/" target="_blank" rel="noopener noreferrer"><img class = "footer-img" src="images/linkedin.png"/></a>
+    <a class="footer-link" href="https://www.instagram.com/ohhweesinn/" target="_blank" rel="noopener noreferrer"><img class = "footer-img" src="images/instagram.png" /></a>
+    <a class="footer-link" href="https://www.flaticon.com/authors/freepik" target="_blank" rel="noopener noreferrer"><img class = "footer-img" src="images/freepik-logo.png" /></a>
   <p class="copyright">© 2022 Oh Wei Sian.</p>
 </div>
 
